fixewd image on mobile

--- a/public/css/custom.less
+++ b/public/css/custom.less
@@ -58,6 +58,9 @@
   }
 }
 .center-container {
+  img{
+    max-width: 100%
+  }
 	display: flex;
 	align-items: center;
 	justify-content: center;
